# AI-Detection-

./: .gitignore  README.md  __init__.py  app.py  colab_vscode_setup.ipynb  eval_adversarial.py  eval_kaggle.py  eval_stream_robustness.py  pyproject.toml  requirements-app.txt  requirements.txt  setup.py  visualize_forensic.py
configs/: default.yaml
configs/experiments/: logo_genimage.yaml
docs/: report.tex  research_statement.md
feature_cache/: manifest_train.csv
image/: __init__.py
image/configs/: __init__.py  config.yaml  (+1 more)
notebooks/: kaggle_extract.ipynb
outputs/: adversarial_results.json  baseline_clip_l14_logo.json  cifake_mixedmodel.json  eval_results.json  fusion_detector_mixed_scaler_clip.pkl  fusion_detector_mixed_scaler_dino.pkl  fusion_detector_mixed_scaler_forensic.pkl  fusion_detector_v3_scaler_clip.pkl  fusion_detector_v3_scaler_dino.pkl  fusion_detector_v3_scaler_forensic.pkl  fusion_logo.json  kaggle_mixed_eval.json  kaggle_zeroshot.json  robustness.json  robustness_aug.json  stream_robustness.json
pmsa/: __init__.py  config.py  detector.pt  inference.py  pretrained.py  provenance.py
reference/: v1_baseline.md
scripts/: 01_extract_features.py  02_train_baseline.py  03_train_fusion.py  04_score_and_calibrate.py  05_shift_experiment.py  06_real_domain_shift.py  07_few_shot_recovery.py  08_shift_generality.py  09_frontier_fewshot.py  benchmark_latency.py  build_manifest.py  cache_features.py  eval_testset.py  train_deploy.py
shared/: __init__.py  attacks.py  metrics.py  utils.py
tests/: test_calibration.py  test_metrics_and_cache.py
(+89 files in other folders)
